# duban

./: .env.example  .env.formal  .env.test  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-macos.yml
alpha/: latest.json
docs/: AI_HANDOFF_PROMPTS.md  APP_EVOLUTION_LOG.md  AUTO_UPDATE_ARCHITECTURE.md  BACKEND_DEVELOPMENT_STANDARDS.md  CLOUD_BACKEND_PLAN.md  COMPANION_ACTIVE_READING_PLAN.md  COMPANION_UI_AUDIT.md  DESKTOP_STORAGE_SCHEMA.md  DIAGNOSTICS_PRIVACY_SPEC.md  GITHUB_RELEASE_AUTOMATION.md  MOBILE_APP_PLAN.md  OPENING_COMPANION_ONBOARDING.md  P7_RELEASE_CHECKLIST.md  PRODUCTION_UPGRADE_PLAN.md  PROJECT_NOTES.md  PROMPT_WRITING_STANDARDS.md  PUBLIC_READINESS_CHANGES.md  QA_MATRIX.md  READING_CONTRACT_CONTEXT.md  README.md  RELEASE_CHECKLIST.md  RELEASE_PROCESS.md  ROADMAP.md  SECURITY_PRIVACY_AUDIT.md  UI_CHANGELOG.md  UI_DESIGN_STANDARDS.md  VERSIONING.md
public/: _headers  ai-config-template.txt
public/test-books/: README.md
qa-fixtures/: README.md  fixtures.json
scripts/: build-local-dmg.sh  build_test_desktop.mjs  docs_audit.mjs  generate_qa_fixtures.mjs  generate_synthetic_qa_books.py  notarize-mac-dmg.sh  p7_release_preflight.mjs  package-mac-signed.sh  release_check.mjs  release_manifest.mjs  release_metadata.mjs  release_notes.mjs  release_preflight.mjs  release_prepare.mjs  release_publish.mjs  release_signing_preflight.mjs  remove_checkerboard.py  security_scan.mjs  test_app_updater_reliability.mjs  test_book_setup_experience.mjs  test_book_ticket_status.mjs  test_companion_context.mjs  test_companion_diagnostics.mjs  test_companion_entrypoints.mjs  test_companion_events.mjs  test_companion_journey.mjs  test_companion_markdown.mjs  test_companion_memory_management.mjs  test_companion_policy.mjs  test_companion_section_record.mjs  test_companion_shell.mjs  test_companion_timeline.mjs  test_companion_transition.mjs  test_companion_visual_state.mjs  test_content_map.mjs  test_guide_memory_carryover.mjs  test_icon_semantics.mjs  test_p7_qa_cases.mjs  test_prompt_word_substitutions.mjs  test_reader_keyboard.mjs  (+13 more)
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.formal.conf.json  tauri.release.conf.json  tauri.test.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: diagnostics.rs  lib.rs  main.rs  storage.rs
(+102 files in other folders)
